@@ -523,6 +523,23 @@
   <string><id>758</id><value>Removing Program Link</value></string>  
   <string><id>998</id><value>XLink Kai</value></string>
   <string><id>999</id><value>Online Gaming</value></string>
+
+  <string><id>1396</id><value>Drifting</value></string>
+  <string><id>1397</id><value>and</value></string>
+  <string><id>1398</id><value>N/A</value></string>
+  <string><id>1399</id><value>N/A</value></string>
+  <string><id>1400</id><value>N/A</value></string>
+  <string><id>1401</id><value>N/A</value></string>
+  <string><id>1402</id><value>N/A</value></string>
+  <string><id>1403</id><value>N/A</value></string>
+  <string><id>1404</id><value>N/A</value></string>
+  <string><id>1405</id><value>N/A</value></string>
+  <string><id>1406</id><value>N/A</value></string>
+  <string><id>1407</id><value>N/A</value></string>
+  <string><id>1408</id><value>N/A</value></string>
+  <string><id>1409</id><value>N/A</value></string>
+  <string><id>1410</id><value>N/A</value></string>
+
   <string><id>10000</id><value>Home</value></string>
   <string><id>10001</id><value>My Programs</value></string>
   <string><id>10002</id><value>My Pictures</value></string>
